# skin_microbiome_skill

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
scripts/: carp_search.py  install.ps1  install.sh  shark_search.py
skill/: __init__.py  ena.py  export.py  main.py  search.py  species.py
tests/: test_skill.py
