[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skinmicrobiome"
version = "0.1.0"
description = "非人类皮肤微生物组文献检索与宏基因组数据集定位工具"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "biopython",
    "pandas",
    "scispacy",
    "enaBrowserTools",
    "openpyxl",
    "sra-tools",
    "transformers",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
skinmicrobiome = "skill.main:main"
